# mu-image

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ensure-venv.sh  llms.txt  robots.txt  setup.py
.github/profile/: README.md
.github/workflows/: build.yml  publish.yml
mu-dng-converter/: .gitignore  CHANGELOG.md  LICENSE  README.md  hook-astropy.py  hook-imagecodecs.py  hook-muimg.py  main.py  main_pywebview.py  pyproject.toml
mu-dng-converter/.ci-sandbox/: build.sh
mu-dng-converter/.github/workflows/: build.yml
mu-dng-converter/installer/: windows.iss
mu-dng-converter/mu_dng_converter/: __init__.py  batch_runner.py  common.py  dialogs.py  fits2dng.py  fits_avm.py  main.py  webview_bridge.py
mu-dng-converter/mu_dng_converter/views/: dng_convert.py  dng_copy.py  dng_dng_view.py  dng_image_view.py  fits_dng_view.py  fits_to_dng.py
mu-dng-converter/web/: app.js  index.html  style.css
mu-raw/: dng.py  setup.py
mu_raw/: README.md  setup.py
muimg/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
muimg/LICENSES/: LICENSE-ADOBE-DNG-SDK  README.md
muimg/c-src/: muimg_compute_graph.h  muimg_core.h  py_ptr.h
muimg/c-src/compute_engine/: compute_engine.cpp
muimg/c-src/demosaic/: rcd.txt  vng.c
muimg/c-src/raw_render/: raw_render_ops.cpp
muimg/docs/: dng_render_pipeline.md
muimg/examples/: make_test_dng.py
muimg/muimg/: __init__.py  _dngio_coreimage.py  calib.py  cli.py  color.py  color_mac.py  common.py  compress.py  csv.py  deps.py  dng.py  dngio.py  dngio_coreimage.py  engine_ops.py  google_photos.py  imgio.py  mc.py  processing.py  raw_render.py  splines.py  tensor.py  tiff_metadata.py  videoio.py
muimg/muimg/_binaries/: libmuimg_core.dylib  libmuimg_core.macos-arm64.dylib  libmuimg_core.macos-x86_64.dylib
muimg/muimg/engines/: __init__.py  base.py  graph.py  ops.py
muimg/muimg/engines/catalog/: ops.yaml
muimg/muimg/engines/core/: __init__.py  engine.py
muimg/muimg/engines/core/include/: muimg_compute_graph.h
muimg/muimg/engines/core/native/: compute_engine.cpp
muimg/muimg/engines/tools/: __init__.py  gen_ops.py
muimg/src/demosaic/: rcd.c  rcd.txt  vng.c
muimg/src/dng_color/: README.md  dng_color_standalone.cpp
muimg/src/raw_render/: README.md  raw_render_ops.cpp
muimg/tests/: conftest.py  test_cli.py  test_color_temp_roundtrip.py  test_compute_engine.py  test_convert_imgformat.py  test_copy_dng_equivalence.py  test_demosaic.py  test_dng.py  test_dng_render.py  test_dng_validate_raw_stages.py  test_exp.py  test_graph.py  test_mc.py  test_metadata_coregraphics.py  test_metadata_endian.py  test_negative_exp.py  test_preview_rendering.py  test_process_raw_comparison.py  test_pyramid_subifd.py  test_subifd_roundtrip.py  test_tiff_tag_registry.py  test_write_dng.py  test_write_dng_functions.py  test_write_mono.py  test_xmp.py  test_xmp_rendering.py  test_xmp_rendering_processed.py
muraw/: README.md  __init__.py  dng.py  pyproject.toml  setup.py
muraw/muraw/: __init__.py  color.py  color_mac.py  dng.py
muraw/tests/: test_dng.py
