[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mu-dng-converter"
version = "0.1.0"
description = "GUI application for batch DNG/FITS image conversion"
license = {text = "MIT"}
authors = [{name = "mu-files", email = "info@mu-files.com"}]
requires-python = ">=3.12"
dependencies = [
    "flet>=0.25",
    "muimg @ git+https://github.com/mu-files/mu-image.git#subdirectory=muimg",
    "setproctitle",
    "astropy>=5.0.0",
]

[project.scripts]
mu-dng-converter = "mu_dng_converter.main:main"
fits2dng = "mu_dng_converter.fits2dng:main"

[tool.setuptools]
packages = ["mu_dng_converter", "mu_dng_converter.views"]
