[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mu-dng-converter"
version = "0.1.0"
description = "GUI application for batch DNG/FITS image conversion"
license = {text = "MIT"}
authors = [{name = "mu-files", email = "info@mu-files.com"}]
requires-python = ">=3.12"
dependencies = [
    "pywebview>=4.0",
    "muimg[all]>=0.1.20260710",
    "setproctitle",
    "astropy",
    "pyavm",
]

[project.scripts]
fits2dng = "mu_dng_converter.fits2dng:main"

[tool.setuptools]
packages = ["mu_dng_converter"]
