# Released under a modified PolyForm Small Business License.
# Free for small businesses, individuals, and academics. See LICENSE for details.

[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "muimg"
version = "0.1.20260429.1343"
description = "DNG and raw image processing utilities"
authors = [{name = "mu-files", email = "info@mu-files.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "PolyForm-Small-Business-1.0.0 (Modified)"}
dependencies = [
    "av",                               # 22 MB
    "click",                            # 108 KB
    "defusedxml",                       # 25 KB
    "google-auth>=2.0.0",               # 235 KB
    "google-auth-oauthlib>=1.0.0",      # 19 KB
    "imagecodecs>=2026.3.6",            # 13 MB
    "numpy",                            # 6.2 MB
    "opencv-python-headless",           # 31 MB
    "requests>=2.25.0",                 # 63 KB
    "scipy>=1.9.0",                     # 22 MB
    "setproctitle",                     # 18 KB
    "tifffile",                         # 242 KB
]

[project.optional-dependencies]
coreimage = [
    "pyobjc-framework-Cocoa",           # 376 KB
    "pyobjc-framework-Quartz",          # 214 KB
]
test = [
    "pytest",                           # 366 KB
]

[project.scripts]
muimg = "muimg.cli:main"

[project.urls]
Homepage = "https://github.com/mu-files/mu-image"
Repository = "https://github.com/mu-files/mu-image"

[tool.setuptools]
packages = ["muimg"]

[tool.setuptools.package-data]
muimg = ["tests/dngfiles/*.dng", "tests/dngfiles/*.jxl"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)-8s %(name)s:%(filename)s:%(lineno)d %(message)s"
addopts = "--tb=no"
