# Released under a modified PolyForm Small Business License.
# Free for small businesses, individuals, and academics. See LICENSE for details.

[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "muimg"
version = "0.1.20260506.2024"
description = "DNG and raw image processing utilities"
authors = [{name = "mu-files", email = "info@mu-files.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "PolyForm-Small-Business-1.0.0 (Modified)"}
dependencies = [
    "click",                            # 108 KB
    "defusedxml",                       # 25 KB
    "imagecodecs>=2026.3.6",            # 13 MB
    "numpy",                            # 6.2 MB
    "opencv-python-headless",           # 31 MB
    "setproctitle",                     # 18 KB
    "tifffile>=2026.5.2",               # 260 KB
]

[project.optional-dependencies]
# Video encoding + Google Photos integration + Testing
all = [
    "av",                               # 22 MB
    "google-auth>=2.0.0",               # 241 KB
    "google-auth-oauthlib>=1.0.0",      # 19 KB
    "requests>=2.25.0",                 # 63 KB
    "pytest",                           # 366 KB
]
# macOS Core Image support
coreimage = [
    "pyobjc-framework-Cocoa",           # 376 KB
    "pyobjc-framework-Quartz",          # 214 KB
]

[project.scripts]
muimg = "muimg.cli:main"

[project.urls]
Homepage = "https://github.com/mu-files/mu-image"
Repository = "https://github.com/mu-files/mu-image"

[tool.setuptools]
packages = ["muimg"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)-8s %(name)s:%(filename)s:%(lineno)d %(message)s"
addopts = "--tb=no"
