# Released under a modified PolyForm Small Business License.
# Free for small businesses, individuals, and academics. See LICENSE for details.

[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "muimg"
version = "0.1.20260530.0907"
description = "DNG and raw image processing utilities"
authors = [{name = "mu-files", email = "info@mu-files.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "PolyForm-Small-Business-1.0.0 (Modified)"}
keywords = [
    "dng", "dng-files", "dng-format",
    "raw-image", "raw-processing",
    "image-processing", "image-conversion",
    "jpegxl", "demosaic", "tiff",
    "photography", "camera", "adobe",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "click",                            # 114 KB
    "defusedxml",                       # 25 KB
    "imagecodecs>=2026.3.6",            # 12 MB
    "numpy",                            # 5.0 MB
    "opencv-python-headless",           # 44 MB
    "setproctitle",                     # 13 KB
    "tifffile>=2026.5.2",               # 260 KB
]

[project.optional-dependencies]
# Video encoding + Google Photos integration + Testing
all = [
    "av",                               # 18 MB
    "google-auth>=2.0.0",               # 240 KB
    "google-auth-oauthlib>=1.0.0",      # 19 KB
    "requests>=2.25.0",                 # 71 KB
    "pytest",                           # 366 KB
]
# macOS Core Image support
coreimage = [
    "pyobjc-framework-Cocoa",           # 379 KB
    "pyobjc-framework-Quartz",          # 215 KB
]

[project.scripts]
muimg = "muimg.cli:main"

[project.urls]
Homepage = "https://github.com/mu-files/mu-image"
Repository = "https://github.com/mu-files/mu-image"

[tool.setuptools]
packages = ["muimg"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)-8s %(name)s:%(filename)s:%(lineno)d %(message)s"
addopts = "--tb=no"
