[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muraw"
version = "0.1.0"
description = "DNG and raw image processing utilities"
authors = [{name = "mu-files", email = "info@mu-files.com"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "opencv-python-headless>=4.5.0",
    "tifffile>=2021.0.0",
    "astropy>=5.0.0",
]
