[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muraw"
version = "0.1.0"
description = "DNG and raw image processing utilities"
authors = [{name = "mu-files", email = "mu-files@users.noreply.github.com"}]
urls = { Homepage = "https://github.com/mu-files/mu-image" }
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.9.0",
    "numpy>=2.0.0",
    "astropy>=6.1.0",
    "tifffile>=2025.6.1",
]

[tool.setuptools]
packages = ["muraw"]
package-dir = {"muraw" = "."}
